Updated, functionality working - talks to other clients, sockets working, mouseup/down working

--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,12 @@ canvas {
 
 <div id="main">
     <h1>Pictionary</h1>
+    
+    <div id="top-message">
+        <div id="guess" style="display: none">
+            Make a guess: <input type="text">
+        </div>
+    </div>
+
     <canvas id="canvas"></canvas>
 </div>
