Added guessing functionality, words, working on drawer/guesser

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,12 @@ canvas {
     <h1>Pictionary</h1>
     
     <div id="top-message">
-        <div id="guess" style="display: none">
+        <div id="word"></div>
+        <div id="guess">
             Make a guess: <input type="text">
+        </div>
+        <div id="user_guess">
+            Guessed:
         </div>
     </div>
 
